force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/FSM_DataCaptureFormNonInfra__c.object-meta.xml
<CustomObject>
    <description>Data capture form structure for Non-Infra BU only, SFI-35</description>
    <label>Data Capture Form Non Infra</label>
    <nameField>
        <displayFormat>DCFNONINF-{000000}</displayFormat>
        <label>Data Capture Form Non Infra Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Capture Form Non Infras</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>