force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_A5SewerageBooklet__c.field-meta.xml
<CustomField>
    <fullName>FSM_A5SewerageBooklet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>A5 - Sewerage booklet</label>
    <type>Checkbox</type>
</CustomField>