force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_A5SewerageBookletComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_A5SewerageBookletComments__c</fullName>
    <description>SFS-4203</description>
    <label>A5 - Sewerage booklet comments</label>
    <type>TextArea</type>
</CustomField>