force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_AlarmSounded__c.field-meta.xml
<CustomField>
    <fullName>FSM_AlarmSounded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>If alarm has sounded, is retest ok</label>
    <type>Checkbox</type>
</CustomField>