force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_AlarmSoundedComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_AlarmSoundedComments__c</fullName>
    <description>SFS-4203</description>
    <label>Alarm sounded,is retest ok comments</label>
    <type>TextArea</type>
</CustomField>