force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_AllDeliveryPaperworkKept__c.field-meta.xml
<CustomField>
    <fullName>FSM_AllDeliveryPaperworkKept__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All delivery paperwork (i.e., this document, delivery note and chemical conformity paperwork) must be kept for minimum of 3 years.</inlineHelpText>
    <label>All delivery paperworkmust be kept</label>
    <type>Checkbox</type>
</CustomField>