force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Area__c.field-meta.xml
<CustomField>
    <fullName>FSM_Area__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <formula>FSM_ServiceTerritory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>