force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_BagMaskResuscitator__c.field-meta.xml
<CustomField>
    <fullName>FSM_BagMaskResuscitator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Bag mask resuscitator</label>
    <type>Checkbox</type>
</CustomField>