force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_BagMaskResuscitatorComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_BagMaskResuscitatorComments__c</fullName>
    <description>SFS-4203</description>
    <label>Bag mask resuscitator comments</label>
    <type>TextArea</type>
</CustomField>