force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CanActivityProceed__c.field-meta.xml
<CustomField>
    <fullName>FSM_CanActivityProceed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Everything ok,can the activity proceed</label>
    <type>Checkbox</type>
</CustomField>