force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CanActivityProceedComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_CanActivityProceedComments__c</fullName>
    <description>SFS-4203</description>
    <label>Can the activity proceed Comments</label>
    <type>TextArea</type>
</CustomField>