force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Carryoutalamptestonthepanel__c.field-meta.xml
<CustomField>
    <fullName>FSM_Carryoutalamptestonthepanel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carry out a lamp test on the panel</label>
    <type>Checkbox</type>
</CustomField>