force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CarryOutVisualCheck__c.field-meta.xml
<CustomField>
    <fullName>FSM_CarryOutVisualCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carry out visual check on pipework</label>
    <type>Checkbox</type>
</CustomField>