force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Checkallvalvesareincorrectposition__c.field-meta.xml
<CustomField>
    <fullName>FSM_Checkallvalvesareincorrectposition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check all valves are in correct position</label>
    <type>Checkbox</type>
</CustomField>