force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CheckChemESafeContainment__c.field-meta.xml
<CustomField>
    <fullName>FSM_CheckChemESafeContainment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Chem-e-safe containment are empty</label>
    <type>Checkbox</type>
</CustomField>