force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CheckdriverandSTWoperatorhaveCOSHH__c.field-meta.xml
<CustomField>
    <fullName>FSM_CheckdriverandSTWoperatorhaveCOSHH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check driver and STW operator have COSHH</label>
    <type>Checkbox</type>
</CustomField>