force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ChecklistCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>FSM_ChecklistCompletedBy__c</fullName>
    <description>SFS-3065</description>
    <formula>CreatedBy.FirstName +&apos; &apos; + CreatedBy.LastName</formula>
    <label>Checklist Completed by</label>
    <type>Text</type>
</CustomField>