force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CheckShowersEyewash__c.field-meta.xml
<CustomField>
    <fullName>FSM_CheckShowersEyewash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check emergency showers and Eyewash</label>
    <type>Checkbox</type>
</CustomField>