force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CheckTankBundAndLineValues__c.field-meta.xml
<CustomField>
    <fullName>FSM_CheckTankBundAndLineValues__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>Check all tank, bund and line values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>