force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CheckTankDamage__c.field-meta.xml
<CustomField>
    <fullName>FSM_CheckTankDamage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check tank for signs of damage leaks</label>
    <type>Checkbox</type>
</CustomField>