force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Checkthecontentsofemergencyspillkit__c.field-meta.xml
<CustomField>
    <fullName>FSM_Checkthecontentsofemergencyspillkit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check the contents of emergency spillkit</label>
    <type>Checkbox</type>
</CustomField>