force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CheckWashHoses__c.field-meta.xml
<CustomField>
    <fullName>FSM_CheckWashHoses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check operation of wash hoses</label>
    <type>Checkbox</type>
</CustomField>