force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ChemicalName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ChemicalName__c</fullName>
    <label>Chemical Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FSM_ChemicalSupplier__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sulphuric Acid</fullName>
            </value>
            <value>
                <fullName>Ferrous Chloride</fullName>
            </value>
            <value>
                <fullName>HFSA</fullName>
            </value>
            <value>
                <fullName>Hydrochloric Acid</fullName>
            </value>
            <value>
                <fullName>Phosphoric Acid</fullName>
            </value>
            <value>
                <fullName>Sodium Bisulphite</fullName>
            </value>
            <value>
                <fullName>Sodium Hypochlorite</fullName>
            </value>
            <value>
                <fullName>Aluminium Sulphate</fullName>
            </value>
            <value>
                <fullName>Ferric Sulphate</fullName>
            </value>
            <value>
                <fullName>Ferrous Sulphate</fullName>
            </value>
            <value>
                <fullName>Polyaluminium Chloride</fullName>
            </value>
            <value>
                <fullName>Salt</fullName>
            </value>
            <value>
                <fullName>Lime</fullName>
            </value>
            <value>
                <fullName>Polymer</fullName>
            </value>
            <value>
                <fullName>Anti-Foam</fullName>
            </value>
            <value>
                <fullName>Solenis</fullName>
            </value>
            <value>
                <fullName>Caustic Soda</fullName>
            </value>
            <value>
                <fullName>Hydrex 1110</fullName>
            </value>
            <value>
                <fullName>Hydrex 1258</fullName>
            </value>
            <value>
                <fullName>Hydrex 1568</fullName>
            </value>
            <value>
                <fullName>Calcium Nitrate</fullName>
            </value>
            <value>
                <fullName>Chlorine</fullName>
            </value>
            <value>
                <fullName>Monosodium Phosphate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>