force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ChemicalSupplier__c.field-meta.xml
<CustomField>
    <fullName>FSM_ChemicalSupplier__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>Chemical Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airedale</fullName>
            </value>
            <value>
                <fullName>Chemifloc</fullName>
            </value>
            <value>
                <fullName>Feralco</fullName>
            </value>
            <value>
                <fullName>Industrial Chemicals Ltd.</fullName>
            </value>
            <value>
                <fullName>Ineos Enterprises</fullName>
            </value>
            <value>
                <fullName>Kemira</fullName>
            </value>
            <value>
                <fullName>Lhoist</fullName>
            </value>
            <value>
                <fullName>OMEX</fullName>
            </value>
            <value>
                <fullName>Packed  Chlorine Ltd</fullName>
            </value>
            <value>
                <fullName>Servo Solutions</fullName>
            </value>
            <value>
                <fullName>Singleton Birch</fullName>
            </value>
            <value>
                <fullName>SNF</fullName>
            </value>
            <value>
                <fullName>Solenis</fullName>
            </value>
            <value>
                <fullName>Tennants</fullName>
            </value>
            <value>
                <fullName>Veolia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>