force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CommunicationEquipment__c.field-meta.xml
<CustomField>
    <fullName>FSM_CommunicationEquipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <inlineHelpText>telephone/radio</inlineHelpText>
    <label>Communication equipment</label>
    <type>Checkbox</type>
</CustomField>