force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CommunicationEquipmentComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_CommunicationEquipmentComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>telephone/radio</inlineHelpText>
    <label>Communication equipment comments</label>
    <type>TextArea</type>
</CustomField>