force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CompleteActivity__c.field-meta.xml
<CustomField>
    <fullName>FSM_CompleteActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Complete activity</label>
    <type>Checkbox</type>
</CustomField>