force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CompleteActivityComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_CompleteActivityComments__c</fullName>
    <description>SFS-4203</description>
    <label>Complete activity comments</label>
    <type>TextArea</type>
</CustomField>