force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmBackPlateVisualInspectionChec__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmBackPlateVisualInspectionChec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm all Back plate/Visual inspection</label>
    <type>Checkbox</type>
</CustomField>