force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmBarrelNumberagainstlisted__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmBarrelNumberagainstlisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Barrel Number against listed</label>
    <type>Checkbox</type>
</CustomField>