force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmcommunicationbetweendriverS__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmcommunicationbetweendriverS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm communication betw driver n STW</label>
    <type>Checkbox</type>
</CustomField>