force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Confirmcorrectchemicalbeingdelivered__c.field-meta.xml
<CustomField>
    <fullName>FSM_Confirmcorrectchemicalbeingdelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm correct chemical being delivered</label>
    <type>Checkbox</type>
</CustomField>