force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmCylinderChecksChecked__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmCylinderChecksChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm all Cylinder checks checked?</label>
    <type>Checkbox</type>
</CustomField>