force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmDriverContactSTW__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmDriverContactSTW__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>Confirm driver contacts STW supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>