force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmMasksChecksChecked__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmMasksChecksChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm all Mask checks checked?</label>
    <type>Checkbox</type>
</CustomField>