force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmPreparationChecked__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmPreparationChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm all Preparation checked?</label>
    <type>Checkbox</type>
</CustomField>