force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmSystemTestsChecked__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmSystemTestsChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm all System Tests checked?</label>
    <type>Checkbox</type>
</CustomField>