force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ConfirmwithdrivertocontactSTWprior__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmwithdrivertocontactSTWprior__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm with driver to contact STW prior to disconnection</inlineHelpText>
    <label>Confirm with driver to contact STW prior</label>
    <type>Checkbox</type>
</CustomField>