force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CoshhChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_CoshhChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3065.</description>
    <label>COSHH Checks</label>
    <type>Checkbox</type>
</CustomField>