force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_CoshhComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_CoshhComments__c</fullName>
    <description>SFS-3065</description>
    <label>COSHH Comments</label>
    <type>TextArea</type>
</CustomField>