force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateTime__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>