force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_DCFHierarchyLevel__c.field-meta.xml
<CustomField>
    <fullName>FSM_DCFHierarchyLevel__c</fullName>
    <defaultValue>1</defaultValue>
    <description>SFI-2041</description>
    <label>DCF Hierarchy Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>