force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_DriverAndOperatorsAwareOfSafeguards__c.field-meta.xml
<CustomField>
    <fullName>FSM_DriverAndOperatorsAwareOfSafeguards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver has RAMS available.</label>
    <type>Checkbox</type>
</CustomField>