force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Driverhassiteinduction__c.field-meta.xml
<CustomField>
    <fullName>FSM_Driverhassiteinduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver has site induction</label>
    <type>Checkbox</type>
</CustomField>