force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Drivermuststaywithdelivery__c.field-meta.xml
<CustomField>
    <fullName>FSM_Drivermuststaywithdelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver must stay with delivery</label>
    <type>Checkbox</type>
</CustomField>