force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_EDMChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_EDMChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3065</description>
    <label>EDM Checks</label>
    <type>Checkbox</type>
</CustomField>