force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_EDMComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_EDMComments__c</fullName>
    <description>SFS-3065</description>
    <label>EDM comments</label>
    <type>TextArea</type>
</CustomField>