force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ErectBarriers__c.field-meta.xml
<CustomField>
    <fullName>FSM_ErectBarriers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Erect barriers</label>
    <type>Checkbox</type>
</CustomField>