force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ErectBarriersComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ErectBarriersComments__c</fullName>
    <description>SFS-4203</description>
    <label>Erect barriers comments</label>
    <type>TextArea</type>
</CustomField>