force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_EscapeApparatus__c.field-meta.xml
<CustomField>
    <fullName>FSM_EscapeApparatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Escape breathing apparatus</label>
    <type>Checkbox</type>
</CustomField>