force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_EscapeApparatusComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_EscapeApparatusComments__c</fullName>
    <description>SFS-4203</description>
    <label>Escape breathing apparatus comments</label>
    <type>TextArea</type>
</CustomField>