force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ExclusionAreaSigns__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExclusionAreaSigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check exclusion area and warning signs e</label>
    <type>Checkbox</type>
</CustomField>