force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ExitSpaceHeadCount__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExitSpaceHeadCount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Exit from space &amp; head count</label>
    <type>Checkbox</type>
</CustomField>