force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ExitSpaceHeadCountComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExitSpaceHeadCountComments__c</fullName>
    <description>SFS-4203</description>
    <label>Exit from space &amp; head count comments</label>
    <type>TextArea</type>
</CustomField>