force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ExtBuildingKioskChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExtBuildingKioskChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3065</description>
    <label>External Building / Kiosks checks</label>
    <type>Checkbox</type>
</CustomField>