force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ExtBuildingKioskComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExtBuildingKioskComments__c</fullName>
    <description>SFS-3065</description>
    <label>External Building/Kiosks comments</label>
    <type>TextArea</type>
</CustomField>