force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FaultFound__c.field-meta.xml
<CustomField>
    <fullName>FSM_FaultFound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created new field based on SFS-5335</description>
    <label>Confirm fault has been found</label>
    <type>Checkbox</type>
</CustomField>