force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FirstAidKit__c.field-meta.xml
<CustomField>
    <fullName>FSM_FirstAidKit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>First aid kit</label>
    <type>Checkbox</type>
</CustomField>