force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FirstAidKitComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_FirstAidKitComments__c</fullName>
    <description>SFS-4203</description>
    <label>First aid kit comments</label>
    <type>TextArea</type>
</CustomField>