force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FloatPumpChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_FloatPumpChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of SFS-3065</description>
    <label>Float / Pump Checks</label>
    <type>Checkbox</type>
</CustomField>