force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FloatPumpComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_FloatPumpComments__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <label>Float / Pump Comments</label>
    <type>TextArea</type>
</CustomField>