force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FLOC__c.field-meta.xml
<CustomField>
    <fullName>FSM_FLOC__c</fullName>
    <description>Created as a part of SFS-4795</description>
    <inlineHelpText>FLOC will be autopopulated fromt he current job</inlineHelpText>
    <label>FLOC</label>
    <length>64</length>
    <type>Text</type>
</CustomField>