force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_FlocDescription__c.field-meta.xml
<CustomField>
    <fullName>FSM_FlocDescription__c</fullName>
    <label>Floc Description</label>
    <type>TextArea</type>
</CustomField>