force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ForcedAirVent__c.field-meta.xml
<CustomField>
    <fullName>FSM_ForcedAirVent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Forced air ventilators/extractors</label>
    <type>Checkbox</type>
</CustomField>