force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ForcedAirVentComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ForcedAirVentComments__c</fullName>
    <description>SFS-4203</description>
    <label>Forced air ventilator/extractor comment</label>
    <type>TextArea</type>
</CustomField>