force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ForHydrochloricAcidDeliveriesOnly__c.field-meta.xml
<CustomField>
    <fullName>FSM_ForHydrochloricAcidDeliveriesOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verbally confirm with delivery driver that he is aware that on completion of delivery the pressure relief valve must be kept closed pressure released into the scrubber system to prevent fuming. If not aware – reject delivery.</description>
    <label>Hydrochloric Pressure Check</label>
    <type>Checkbox</type>
</CustomField>